# cesae-2026-calculator-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  docker-publish.yml
src/calculator/: cli.py  operations.py
tests/calculator/: operations_test.py
